--- a/13094-h/13094-h.htm
+++ b/13094-h/13094-h.htm
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>The Project Gutenberg eBook of Heart of the West, by O. Henry</title>
 <style type="text/css">
-	body 	{background:#faebd7;
+   body  {background:#fdfdfd;
 			 color:black;
 			 font-family: "Times New Roman", serif;
 			 font-size:14pt;
@@ -58,6 +58,7 @@ Title: Heart of the West
 Author: O. Henry
 
 Release Date: August 3, 2004  [eBook #13094]
+HTML version most recently updated August 26, 2017
 
 Edition: 11
 
@@ -3642,7 +3643,7 @@ hurdy-gurdy and the informal contribution to the sudden stranger's store
 of experience. Beyond this dishonourable fringe upon the old town's jowl
 rose a dense mass of trees, surmounting and filling a little hollow.
 Through this bickered a small stream that perished down the sheer and
-disconcerting side of the great ca&ntilde;non of the Rio Bravo del
+disconcerting side of the great ca&ntilde;on of the Rio Bravo del
 Norte.
 
 <p>In this sordid spot was condemned to remain for certain hours the
@@ -10333,7 +10334,7 @@ too."
 
 ******* This file should be named 13094-h.txt or 13094-h.zip *******
 
-This and all associated files of various formats will be found in:<br />
+This and all associated files of various formats will be found in:<br>
 <a href="http://www.gutenberg.net/1/3/0/9/13094">http://www.gutenberg.net/1/3/0/9/13094</a>
 
 Updated editions will replace the previous one--the old editions
